--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.6",
     "colors": "^1.4.0",
     "discord.js": "^14.9.0",
+    "express": "^4.18.2",
     "sqlite3": "^5.1.6"
   }
 }
